makes list items on channel page consistent with contributor page, fixes modal size on mobile, adds touch functionality for sortable on mobile by adding touchpunch gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,14 +76,22 @@ nav {
   @extend .white-text;
 }
 
-.video-list > li > .row, #playlist-list > li > .row {
+.video-list > li > .row, .video-list > li > a > .row, #playlist-list > li > .row {
   @extend .white, .grey-text, .text-darken-2;
   transition: .3s ease-out;
   &:hover {
     @extend .grey-text, .text-darken-4;
-    .list-action > i, .new-video-button {
+    .list-action > i, .new-video-button, .play-video-button {
       @extend .grey-text, .text-lighten-1;
       transition: .3s ease-out;
+      &:hover {
+        @extend .green-text, .text-accent-4;
+      }
+    }
+  }
+  &:active, &:focus {
+    .play-video-button {
+      @extend .green-text, .text-accent-4;
     }
   }
 }
@@ -92,17 +100,13 @@ nav {
   @extend .grey-text, .text-lighten-2;
   transition: .3s ease-out;
   &:hover {
-    @extend .green-text, .text-accent-4;
     cursor: move;
   }
 }
 
-.new-video-button {
+.new-video-button, .play-video-button {
   @extend .grey-text, .text-lighten-2;
   transition: .3s ease-out;
-  &:hover {
-    @extend .green-text, .text-accent-4;
-  }
 }
 
 .fixed-action-btn.horizontal {
@@ -114,5 +118,13 @@ nav {
     li {
       margin: .75em .5em 0 0;
     }
+  }
+}
+
+@media #{$small-and-down} {
+  .modal {
+    max-height: 90%;
+    max-width: 70%;
+    margin: 0;
   }
 }
